Added animation,visualisation and comptability to mac